fix(sv): prevent zoom-in/out buttons overlapping + remove noise in bottom right status bar of map embed

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -5973,3 +5973,8 @@ body {
 	opacity: 0.4;
 	cursor: not-allowed;
 }
+
+.gmnoprint:has([title="Map Data"]),
+.gmnoprint:has([aria-label^="Terms"]) {
+	display: none;
+}
